<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_facebook_account">Create new facebook account</string>
    <string name="login_in_to_another_account">Login in to another account</string>
    <string name="login">Login</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_your_new_password_for">"Create new password for "</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="click_here">Click here</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home_screen">Home Screen Facebook</string>
    <string name="change_password">Change password</string>
    <string name="create_new_password_description">Password must be at least 8 characters long.</string>
    <string name="otp">OTP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="done">Done</string>
    <string name="get_otp">get otp</string>
    <string name="or">OR</string>
    <string name="find_your_account">Find your account</string>
    <string name="enter_your_email">Enter your email</string>


</resources>