<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LoginFragment"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_or_phone"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/border"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgotTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:weightSum="3"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:layout_weight="1"
            tools:ignore="MissingConstraints" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider"
            android:layout_weight="1"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="136dp"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:radius="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>